--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "dev": "docusaurus start",
+    "dev": "concurrently \"npm:watch-screenshots\" \"docusaurus start\"",
+    "generate-screenshots": "node ./scripts/generate-screenshots.js",
+    "watch-screenshots": "node ./scripts/generate-screenshots.js --watch",
+    "prestart": "npm run generate-screenshots",
+    "prebuild": "npm run generate-screenshots",
     "update-release": "node update-release.js"
   },
   "dependencies": {
@@ -28,7 +32,9 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.9.2",
     "@docusaurus/types": "3.9.2",
-    "baseline-browser-mapping": "^2.9.11"
+    "baseline-browser-mapping": "^2.9.11",
+    "chokidar": "^3.5.3",
+    "concurrently": "^8.0.0"
   },
   "browserslist": {
     "production": [
