--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "docusaurus build",
+    "build": "tinacms build && docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "dev": "concurrently \"npm:watch-screenshots\" \"docusaurus start\"",
+    "dev": "TINA_PUBLIC_IS_LOCAL=true tinacms dev -c 'docusaurus start'",
     "generate-screenshots": "node ./scripts/generate-screenshots.js",
     "watch-screenshots": "node ./scripts/generate-screenshots.js --watch",
     "prestart": "npm run generate-screenshots",
@@ -27,11 +27,14 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "swiper": "^12.0.3"
+    "swiper": "^12.0.3",
+    "tinacms": "^3.1.3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.9.2",
     "@docusaurus/types": "3.9.2",
+    "@tinacms/cli": "^2.0.6",
+    "@types/node": "^25.0.3",
     "baseline-browser-mapping": "^2.9.11",
     "chokidar": "^3.5.3",
     "concurrently": "^8.0.0"
