--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "tinacms build && docusaurus build",
+    "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -27,13 +27,13 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "swiper": "^12.0.3",
-    "tinacms": "^3.1.3"
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.9.2",
     "@docusaurus/types": "3.9.2",
     "@tinacms/cli": "^2.0.6",
+    "tinacms": "^3.1.3",
     "@types/node": "^25.0.3",
     "baseline-browser-mapping": "^2.9.11",
     "chokidar": "^3.5.3",
