--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
+    "start": "docusaurus start --port 3001",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
+    "serve": "docusaurus serve --port 3001",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "dev": "TINA_PUBLIC_IS_LOCAL=true tinacms dev -c 'docusaurus start'",
+    "dev": "TINA_PUBLIC_IS_LOCAL=true tinacms dev -c 'docusaurus start --port 3001'",
     "generate-screenshots": "node ./scripts/generate-screenshots.js",
     "watch-screenshots": "node ./scripts/generate-screenshots.js --watch",
     "prestart": "npm run generate-screenshots",
